# mcmc-db

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: integration-guide.md  release-checklist.md
docs/audits/: 2026-02-15-agents-release-workflow-followup.md
docs/plans/: 2026-01-31-mcmc-ref-design.md  2026-02-11-reparametrization-pairs-design.md  2026-02-21-mcmc-ref-consolidation-plan.md
docs/releases/: 0.1.1.md  0.1.2.md  0.1.3-integration-essay.md  0.1.3.md  0.1.4.md
scripts/: build_references.py  convert_new_models.py  generate_local_references.py  generate_new_models.py  generate_pair_references.py  generate_posteriordb_references.py  generate_provenance_references.py  import_informed_references.py  materialize_provenance.py  publish_provenance_references.py  sync_data_package.py  sync_stan_data.py  sync_stan_models.py
src/mcmc_ref/: __init__.py  backends.py  backends_arrow.py  backends_numpy.py  build_references.py  cli.py  cmdstan_generate.py  compare.py  convert.py  diagnostics.py  draws.py  generate.py  generate_draws.py  informed_references.py  local_generate.py  model_inventory.py  pairs.py  provenance.py  reference.py  store.py
src/mcmc_ref/data/draws/: eight_schools-noncentered.draws.parquet  hierarchical_lr-noncentered.draws.parquet  neals_funnel-noncentered.draws.parquet  varying_slopes-noncentered.draws.parquet  wells_data-wells_dist.draws.parquet
src/mcmc_ref/data/meta/: GLM_Binomial_data-GLM_Binomial_model.meta.json  GLM_Poisson_Data-GLM_Poisson_model.meta.json  bangladesh_contraceptive-noncentered.meta.json  eight_schools-noncentered.meta.json  hierarchical_lr-noncentered.meta.json  neals_funnel-noncentered.meta.json  varying_slopes-noncentered.meta.json
src/mcmc_ref/data/pairs/bangladesh_contraceptive/: pair.json
src/mcmc_ref/data/pairs/eight_schools/: pair.json
tests/integration/: test_package_data_completeness.py  test_posteriordb_reference.py  test_reference_archive_conversion.py  test_stan_assets.py
tests/unit/: test_backends_consistency.py  test_build_references.py  test_cleanup_legacy_paths.py  test_cli.py  test_cli_pairs.py  test_cmdstan_generate.py  test_compare.py  test_convert.py  test_data_package_assets.py  test_diagnostics.py  test_generate.py  test_generate_draws.py  test_informed_references.py  test_local_generate.py  test_model_inventory.py  test_new_model_draws.py  test_new_model_files.py  test_pairs.py  test_provenance.py  test_reference.py  test_store.py
(+26 files in other folders)
