[project]
name = "mcmc-ref"
version = "0.0.0"
description = "Reference posterior validation tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyarrow>=14",
  "click>=8.1",
]

[project.optional-dependencies]
extras = ["numpy>=1.24"]
build = ["cmdstanpy>=1.2"]
dev = ["pytest>=8.2", "ruff>=0.5.0", "ty>=0.0.1"]

[project.scripts]
mcmc-ref = "mcmc_ref.cli:main"
mcmc-ref-build-references = "mcmc_ref.build_references:main"
mcmc-ref-generate = "mcmc_ref.generate_draws:main"

[tool.setuptools.package-data]
mcmc_ref = ["data/**/*.json", "data/**/*.parquet", "data/**/*.stan"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
